2003-08-31  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)

	* tests/yacc7.test: Require bison.

2003-08-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (scan_file): Warn about underquoted AC_DEFUN.
	($underquoted_manual_once): New variable.
	* automake.texi (Extending aclocal): Document this.

2003-08-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (@file_order): New variable, to make sure
	files are output in the opposite order of the -I arguments.
	(scan_file): Fill it.
	(trace_used_macros, write_aclocal): Use it.
	(scan_m4_files): Reverse the directory contents, so that
	macros from the lexicographically greatest files are preferred.
	* tests/aclocal9.test, tests/acloca10.test, tests/acloca11.test:
	New files.
	* tests/Makefile.am (TESTS): Add them.

2003-08-24  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #206299:
	* automake.in ($configure_deps_greatest_timestamp,
	$output_deps_greatest_timestamp): New variables.
	(initialize_per_input): Reset $output_deps_greatest_timestamp.
	(scan_autoconf_traces, scan_autoconf_files, read_am_file):
	Update $configure_deps_greatest_timestamp and
	$output_deps_greatest_timestamp
	(generate_makefile): Rewrite the logic to decide whether
	to rewrite the output.  Move the leading dup_channel_setup
	and trailing drop_channel_setup to MAIN, so that
	drop_channel_setup is executed for all exit paths.
	* tests/aclocal7.test: Update to check for $AUTOMAKE --no-force
	* tests/distcom6.test: New file.  Report from Scott James Remnant.
	* tests/Makefile.am (TESTS): Add distcom6.test.

	* configure.in: Require Autoconf 2.57b to be sure
	aclocal can use autom4te --language Autoconf-without-aclocal-m4.
	* m4/init.m4: Likewise.  Move the AC_PREREQ and m4_pattern_allow
	calls inside the AM_INIT_AUTOMAKE macro.
	* m4/auxdir.m4, m4/cond.m4, m4/lex.m4, m4/regex.m4: Move
	AC_PREREQ calls inside the macros.
	* m4/header.m4: Remove AC_PREREQ.

	* automake.in (file_contents_internal): Do not add newlines before