@@ -1,3 +1,8 @@
+2003-09-01  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/config.sub, lib/config.guess, lib/texinfo.tex,
+	lib/config-ml.in, lib/symlink-tree: New upstream versions.
+
 2003-08-31  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)
 
 	* tests/yacc7.test: Require bison.
